src/tailwind.css
/* ... */
.chat {
  width: calc(100% - 40px);
  height: 95dvh;
  padding: 21px;
  padding-bottom: 24px;
  display: flex;
  flex-direction: column;
  position: fixed;
  transition: 500ms;
  border-radius: 48px;
  bottom: 20px;
  background-color: var(--color-primary);
  z-index: 9999;
  border: 1px solid #cccccca2;
}
@media (width >= 48rem) {
  .chat {
    width: 400px;
    box-shadow: 0 0 12px rgba(0, 0, 0, 0.22);
  }
}
.open-chat-from-left {
  left: 0;
  transform: translateX(20px);
}
.close-chat-to-left {
  left: 0;
  transform: translateX(-100%);
}
.open-chat-from-right {
  right: 0;
  transform: translateX(-20px);
}
.close-chat-to-right {
  right: 0;
  transform: translateX(100%);
}
.open-chat-from-bottom-right {
  right: 20px;
  scale: 100%;
  transform-origin: bottom right;
}
.close-chat-to-bottom-right {
  right: 20px;
  scale: 0;
  transform-origin: bottom right;
}
.open-chat-from-bottom-left {
  left: 20px;
  scale: 100%;
  transform-origin: bottom left;
}
.close-chat-to-bottom-left {
  left: 20px;
  scale: 0;
  transform-origin: bottom left;
}
@media (width < 48rem) {
  .mobile-open-chat-to-bottom {
    transform: translate(0, 0);
    right: 20px;
    opacity: 1;
  }
  .mobile-close-chat-to-bottom {
    transform: translate(0, 0);
    right: 20px;
    left: 20px;
    opacity: 0;
    pointer-events: none;
  }
}
.button-shadow {
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
}
.faded-word {
  animation-name: fadeWord;
  animation-timing-function: ease-in-out;
  animation-play-state: paused;
  animation-fill-mode: forwards;
  animation-direction: normal;
  animation-duration: 0.2s;
  color: transparent;
}
@keyframes fadeWord {
  from {
    color: transparent;
    width: 20px;
  }
  to {
    color: var(--color-primary);
    width: fit-content;
  }
}
@property --tw-translate-x {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-translate-y {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-translate-z {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-scale-x {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
@property --tw-scale-y {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
@property --tw-scale-z {
  syntax: "*";
  inherits: false;
  initial-value: 1;
}
@property --tw-rotate-x {
  syntax: "*";
  inherits: false;
  initial-value: rotateX(0);
}
@property --tw-rotate-y {
  syntax: "*";
  inherits: false;
  initial-value: rotateY(0);
}
@property --tw-rotate-z {
  syntax: "*";
  inherits: false;
  initial-value: rotateZ(0);
}
@property --tw-skew-x {
  syntax: "*";
  inherits: false;
  initial-value: skewX(0);
}
@property --tw-skew-y {
  syntax: "*";
  inherits: false;
  initial-value: skewY(0);
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-leading {
  syntax: "*";
  inherits: false;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-ordinal {
  syntax: "*";
  inherits: false;
}
@property --tw-slashed-zero {
  syntax: "*";
  inherits: false;
}
@property --tw-numeric-figure {
  syntax: "*";
  inherits: false;
}
@property --tw-numeric-spacing {
  syntax: "*";
  inherits: false;
}
@property --tw-numeric-fraction {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-ring-inset {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-offset-width {
  syntax: "<length>";
  inherits: false;
  initial-value: 0px;
}
@property --tw-ring-offset-color {
  syntax: "*";
  inherits: false;
  initial-value: #fff;
}
@property --tw-ring-offset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-outline-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-sepia {
  syntax: "*";
  inherits: false;
}
@property --tw-drop-shadow {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-sepia {
  syntax: "*";
  inherits: false;
}
@property --tw-duration {
  syntax: "*";
  inherits: false;
}
@property --tw-ease {
  syntax: "*";
  inherits: false;
}

